[project]
name = "cholespy"
version = "0.1"
description = "A drop in replacement for sksparse for sparse cholseky factorization"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["cholesky", "sksparse"]
authors = [
    {name = "Jeff Quinn", email = "quinnj2@mskcc.org" }
]

maintainers = [
    {name = "Jeff Quinn", email = "quinnj2@mskcc.org" }
]

[build-system]
requires = ["setuptools>=42", "scikit-build-core >=0.4.3", "nanobind >=1.3.2", "scikit-build==0.14.0", "cmake>=3.18"]
build-backend = "scikit_build_core.build"

dependencies = [
    "numpy",
    "scipy"
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["pytest", "tox"]

[project.urls]
"Homepage" = "https://github.com/tansey-lab/bayestme"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"